@@ -12,125 +12,139 @@ AM_CFLAGS = $(DIX_CFLAGS) @SERVER_DEFINES@ @LOADER_DEFINES@
 
 sdk_HEADERS = xvdix.h xvmcext.h
 
-if MITSHM
+# Sources always included in libXextbuiltin.la & libXext.la
+BUILTIN_SRCS =			\
+	shape.c			\
+	sleepuntil.c		\
+	sleepuntil.h		\
+	xtest.c			\
+	xtest1di.c		\
+	xtest1dd.c		\
+	xtest1dd.h		\
+	xf86bigfont.c
+
+# Sources always included in libXextmodule.la & libXext.la
+MODULE_SRCS =			\
+	bigreq.c		\
+	mitmisc.c		\
+	shape.c			\
+	sync.c			\
+	xcmisc.c		\
+	dpms.c			\
+	dpmsproc.h
+
+# Optional sources included if extension enabled by configure.ac rules
+
+# MIT Shared Memory extension
 MITSHM_SRCS = shm.c
+if MITSHM
+BUILTIN_SRCS += $(MITSHM_SRCS)
 endif
 
-if XV
+# XVideo extension
 XV_SRCS = xvmain.c xvdisp.c xvmc.c xvdix.h xvmcext.h xvdisp.h
+if XV
+MODULE_SRCS  += $(XV_SRCS)
 endif
 
-if RES
+# XResource extension: lets clients get data about per-client resource usage
 RES_SRCS = xres.c
+if RES
+MODULE_SRCS  += $(RES_SRCS)
 endif
 
-if SCREENSAVER
+# MIT ScreenSaver extension
 SCREENSAVER_SRCS = saver.c
+if SCREENSAVER
+MODULE_SRCS  += $(SCREENSAVER_SRCS)
 endif
 
-if XCSECURITY   
+# Xinerama extension: making multiple video devices act as one virtual screen
+XINERAMA_SRCS = panoramiX.c panoramiX.h panoramiXh.h panoramiXsrv.h panoramiXprocs.c panoramiXSwap.c 
+if XINERAMA
+BUILTIN_SRCS += $(XINERAMA_SRCS)
+endif
+
+# Security extension: multi-level security to protect clients from each other
 XCSECURITY_SRCS = security.c
+if XCSECURITY   
+BUILTIN_SRCS += $(XCSECURITY_SRCS)
+
 SERVERCONFIGdir = $(libdir)/xserver
 SERVERCONFIG_DATA = SecurityPolicy
 AM_CFLAGS += -DDEFAULTPOLICYFILE=\"$(SERVERCONFIGdir)/SecurityPolicy\"
 endif
 
-if XINERAMA
-PANORAMIX_SRCS = panoramiX.c panoramiX.h panoramiXh.h panoramiXsrv.h panoramiXprocs.c panoramiXSwap.c 
-endif
-
-if XEVIE
+# X EVent Interception Extension: allows accessibility helpers & composite
+# managers to intercept events from input devices and transform as needed
+# before the clients see them.
 XEVIE_SRCS = xevie.c
+if XEVIE
+BUILTIN_SRCS += $(XEVIE_SRCS)
 endif
 
-if XPRINT
+# XPrint: Printing via X Protocol
 XPRINT_SRCS = xprint.c
+if XPRINT
+BUILTIN_SRCS += $(XPRINT_SRCS)
 endif
 
-if APPGROUP
+# AppGroup
 APPGROUP_SRCS = appgroup.c appgroup.h
+if APPGROUP
+BUILTIN_SRCS += $(APPGROUP_SRCS)
 endif
 
-if CUP
+# Colormap Utilization Protocol: Less flashing when switching between
+# PsuedoColor apps and better sharing of limited colormap slots
 CUP_SRCS = cup.c
+if CUP
+MODULE_SRCS  += $(CUP_SRCS)
 endif
 
-if EVI
+# Extended Visual Information
 EVI_SRCS = EVI.c sampleEVI.c EVIstruct.h
+if EVI
+MODULE_SRCS  += $(EVI_SRCS)
 endif
 
-if MULTIBUFFER
+# Multi-buffering extension
 MULTIBUFFER_SRCS = mbuf.c
-endif
 EXTRA_MULTIBUFFER_SRCS = mbufbf.c mbufpx.c
-
-if FONTCACHE
-FONTCACHE_SRCS = fontcache.c
+if MULTIBUFFER
+MODULE_SRCS  += $(MULTIBUFFER_SRCS)
 endif
+
+# Font Cache extension
+FONTCACHE_SRCS = fontcache.c
+if FONTCACHE
+MODULE_SRCS  += $(FONTCACHE_SRCS)
+endif
+
+# Now take all of the above, mix well, bake for 10 minutes and get libXext*.la
+
+libXext_la_SOURCES =		$(BUILTIN_SRCS) $(MODULE_SRCS)
+
+libXextbuiltin_la_SOURCES =	$(BUILTIN_SRCS)
+
+libXextmodule_la_SOURCES =	$(MODULE_SRCS)
+libXextmodule_la_CFLAGS = 	$(AM_CFLAGS) @MODULE_DEFINES@ -DEXTMODULE
 
 EXTRA_DIST = \
 	README.xtest1-ddx \
 	SecurityPolicy \
-	$(EXTRA_MULTIBUFFER_SRCS)
-
-libXext_la_SOURCES =		\
-	bigreq.c		\
-	mitmisc.c		\
-	shape.c			\
-	sleepuntil.c		\
-	sleepuntil.h		\
-	sync.c			\
-	xtest.c			\
-	xtest1di.c		\
-	xtest1dd.c		\
-	xtest1dd.h		\
-	xcmisc.c		\
-	dpms.c			\
-	dpmsproc.h		\
-	xf86bigfont.c		\
-	$(MITSHM_SRCS)		\
-	$(XV_SRCS)		\
-	$(RES_SRCS)		\
-	$(SCREENSAVER_SRCS)	\
-	$(PANORAMIX_SRCS)	\
-	$(XCSECURITY_SRCS)	\
-	$(XEVIE_SRCS)		\
-	$(XPRINT_SRCS)		\
-	$(APPGROUP_SRCS)	\
-	$(CUP_SRCS)		\
-	$(EVI_SRCS)		\
-	$(MULTIBUFFER_SRCS)	\
+	$(MITSHM_SRCS) \
+	$(XV_SRCS) \
+	$(RES_SRCS) \
+	$(SCREENSAVER_SRCS) \
+	$(XCSECURITY_SRCS) \
+	$(PANORAMIX_SRCS) \
+	$(XEVIE_SRCS) \
+	$(XPRINT_SRCS) \
+	$(APPGROUP_SRCS) \
+	$(CUP_SRCS) \
+	$(EVI_SRCS) \
+	$(MULTIBUFFER_SRCS) \
+	$(EXTRA_MULTIBUFFER_SRCS) \
 	$(FONTCACHE_SRCS)
 
-libXextbuiltin_la_SOURCES =	\
-	shape.c			\
-	sleepuntil.c		\
-	sleepuntil.h		\
-	xtest.c			\
-	xtest1di.c		\
-	xtest1dd.c		\
-	xtest1dd.h		\
-	xf86bigfont.c		\
-	$(MITSHM_SRCS)		\
-	$(PANORAMIX_SRCS)	\
-	$(XCSECURITY_SRCS)	\
-	$(XEVIE_SRCS)		\
-	$(XPRINT_SRCS)		\
-	$(APPGROUP_SRCS)
-
-libXextmodule_la_CFLAGS = $(AM_CFLAGS) @MODULE_DEFINES@ -DEXTMODULE
-libXextmodule_la_SOURCES =	\
-	bigreq.c		\
-	mitmisc.c		\
-	shape.c			\
-	sync.c			\
-	xcmisc.c		\
-	dpms.c			\
-	dpmsproc.h		\
-	$(XV_SRCS)		\
-	$(RES_SRCS)		\
-	$(SCREENSAVER_SRCS)	\
-	$(CUP_SRCS)		\
-	$(EVI_SRCS)		\
-	$(MULTIBUFFER_SRCS)	\
-	$(FONTCACHE_SRCS)
